<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include layout="@layout/main_head" />

    <!-- 自定义view -->

    <com.allen.iguangwai.widget.ExpandableView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <!-- 选项卡tab -->

        <LinearLayout
            android:id="@+id/allTab_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="horizontal"
            android:weightSum="4" >

            <!-- tab1 -->

            <LinearLayout
                android:id="@+id/tab1_LinearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tab1_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/area_study"
                    android:textColor="#707070"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/tab1_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/tab1_icon_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:gravity="center_vertical"
                        android:src="@drawable/update_detail_down" />
                </LinearLayout>
            </LinearLayout>

            <!-- tab2 -->

            <LinearLayout
                android:id="@+id/tab2_LinearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tab2_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/area_life"
                    android:textColor="#707070"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/tab2_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/tab2_icon_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:gravity="center_vertical"
                        android:src="@drawable/update_detail_down" />
                </LinearLayout>
            </LinearLayout>
            <!-- tab3 -->

            <LinearLayout
                android:id="@+id/tab3_LinearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tab3_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/area_activity"
                    android:textColor="#707070"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/tab3_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/tab3_icon_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:gravity="center_vertical"
                        android:src="@drawable/update_detail_down" />
                </LinearLayout>
            </LinearLayout>
            <!-- tab4 -->

            <LinearLayout
                android:id="@+id/tab4_LinearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tab4_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/area_new"
                    android:textColor="#707070"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/tab4_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/tab4_icon_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:gravity="center_vertical"
                        android:src="@drawable/update_detail_down" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- 下划标识线 -->

        <ImageView
            android:id="@+id/down_line"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:src="@drawable/down_line" />

        <!-- 各个子分区 -->


        <!-- tab1子分区 -->

        <LinearLayout
            android:id="@+id/tab1_subarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp" >

            <Button
                android:id="@+id/bt_subarea_exam"
                style="@style/bt_press_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_exam"
                 >
            </Button>

            <Button
                android:id="@+id/bt_subarea_share"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_share" >
            </Button>

            <Button
                android:id="@+id/bt_subarea_answer"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_answer" >
            </Button>
        </LinearLayout>
        <!-- tab2子分区 -->

        <LinearLayout
            android:id="@+id/tab2_subarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp" >

            <Button
                android:id="@+id/bt_subarea_dormitory"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_dormitory" >
            </Button>

            <Button
                android:id="@+id/bt_subarea_food"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_food" >
            </Button>

            <Button
                android:id="@+id/bt_subarea_travel"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_travel" >
            </Button>
        </LinearLayout>
        <!-- tab3子分区 -->

        <LinearLayout
            android:id="@+id/tab3_subarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp" >

            <Button
                android:id="@+id/bt_subarea_country"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_country" >
            </Button>

            <Button
                android:id="@+id/bt_subarea_school"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_school" >
            </Button>

            <Button
                android:id="@+id/bt_subarea_academy"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_academy" >
            </Button>

            <Button
                android:id="@+id/bt_subarea_corporation"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_corporation" >
            </Button>
        </LinearLayout>
        <!-- tab4子分区 -->

        <LinearLayout
            android:id="@+id/tab4_subarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp" >

            <Button
                android:id="@+id/bt_subarea_guide"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_guide" >
            </Button>

            <Button
                android:id="@+id/bt_subarea_solution"
                style="@style/bt_subarea"
                android:layout_weight="1"
                android:text="@string/subarea_solution" >
            </Button>
        </LinearLayout>
    </com.allen.iguangwai.widget.ExpandableView>

    <android.support.v4.view.ViewPager
        android:id="@+id/four_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>