<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/left_drawer_item_bg_normal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:minHeight="102.0dip"
        android:orientation="horizontal"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15.0dip"
            android:layout_marginTop="30.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/menu_head"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:layout_marginLeft="32.0dip"
                android:layout_marginRight="16.0dip"
                android:background="@drawable/head"
                android:padding="1.0dip" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/tour"
                android:textColor="@color/left_drawer_user_name"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:paddingTop="16.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView style="@style/left_drawer_item_line" />

            <LinearLayout
                android:id="@+id/mydata_bt"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_mydata"
                    android:text="@string/left_drawer_item_mydata" />
            </LinearLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <LinearLayout
                android:id="@+id/mymsg_bt"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_mymsg"
                    android:text="@string/left_drawer_item_message" />
            </LinearLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <LinearLayout
                android:id="@+id/myacy_bt"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_myacticity"
                    android:text="@string/left_drawer_item_myactivity" />
            </LinearLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <LinearLayout
                android:id="@+id/offline_bt"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_logoff"
                    android:text="@string/left_drawer_item_logoff" />
            </LinearLayout>

            <ImageView style="@style/left_drawer_item_line" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>