<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/layout_selecter"
            android:clickable="true" >

            <TextView
                style="@style/backStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8.0dip"
                android:text="@string/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            style="@style/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/hottopic" />
    </RelativeLayout>

    <com.allen.iguangwai.widget.KeywordsFlow
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/change_button"
        android:layout_below="@+id/title_bar"
        android:layout_margin="20dp" >
    </com.allen.iguangwai.widget.KeywordsFlow>

    <Button
        android:id="@+id/change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:background="@drawable/layout_selecter"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>