<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#18B4ED" >

        <TextView
            android:id="@+id/search_back"
            style="@style/backStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/back" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/searchtitle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/toSearch"
            android:layout_width="25dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dp"
            android:src="@drawable/search_black" />

        <EditText
            android:id="@+id/search_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/title_layout_search_border_grey"
            android:focusable="true"
            android:gravity="left"
            android:hint="@string/searchContent"
            android:maxLength="100"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp" >
        </EditText>
    </LinearLayout>

    <ListView
        android:id="@+id/listview_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>